--- a/resources/css/main/style.css
+++ b/resources/css/main/style.css
@@ -12,3 +12,9 @@
 .divTarjetaFind .imgProfileFind{
 	width: 80%;
 }
+.activeTarjeta{
+	background: pink;
+}
+.activeContenido{
+	background: blue;
+}
