--- a/resources/css/main/style.css
+++ b/resources/css/main/style.css
@@ -1,5 +1,17 @@
+.backgroundContenidoPubli{
+	background: #2980b9;
+	color: white;
+	text-align: center;
+}
 .headerPerfil{
-	margin-top: 2%;
+	padding-top: 4%;
+	background: #3498db;
+	padding-bottom: 2%;
+	padding-left: 3%;
+}
+.profileInfo{
+	color: white;
+	font-weight: bold;
 }
 .imgPerfil{
 	width: 128px;
@@ -19,16 +31,18 @@
 	background: blue;
 }
 .notificacion{
-	
-	
-	
 }
+
 .notificacion .contenidoNotificacion{
-	background: red;
+	padding-top: 2%;
 	padding-left: 3%;
 	padding-right: 3%;
 	margin-left: 2%;
-	height: 100px;
+	height: 150px;
+}
+.notificacion img{
+	width: 80%;
+	margin-top: 25%;
 }
 .publicacionNews{
 	height: 150px;
