finalizacion de jornada

--- a/resources/css/main/style.css
+++ b/resources/css/main/style.css
@@ -1,3 +1,9 @@
+.newsFeed{
+	background: #27ae60;
+}
+.contenido{
+	padding-top: 5%;
+}
 .backgroundContenidoPubli{
 	background: #2980b9;
 	color: white;
